@@ -616,11 +616,8 @@ bool OmnirigRigDrv::checkFreqChange(int params, bool force)
         return false;
     }
 
-    bool inForce = force;
-
     if ( !rigProfile.getFreqInfo ) return true;
-    if ( !inForce && !(params & (FREQMASK | ALLVFOsMASK) ) ) return true;
-    if ( !inForce && (params & ALLVFOsMASK)) inForce = true;
+    if ( !force && !(params & (FREQMASK | ALLVFOsMASK) ) ) return true;
 
     unsigned int vfo_freq = 0;
     OmnirigV1::RigParamX vfo = OmnirigV1::PM_UNKNOWN;
@@ -654,7 +651,7 @@ bool OmnirigRigDrv::checkFreqChange(int params, bool force)
     qCDebug(runtime) << "Rig Freq: "<< vfo_freq;
     qCDebug(runtime) << "Object Freq: "<< currFreq;
 
-    if ( vfo_freq != currFreq || inForce )
+    if ( vfo_freq != currFreq || force )
     {
         currFreq = vfo_freq;
         qCDebug(runtime) << "emitting FREQ changed" << currFreq << Hz2MHz(currFreq);
