@@ -3,6 +3,7 @@ TBC - 0.48.0
 - [CHANGED] - Omnirig Drivers: Removed QT AXContainers - pure Windows API code
 - [CHANGED] - Enabled Chekbox in Alerts Table (issue #867)
 - [CHANGED] - Serial Port Completer contains Horizontal ScrollBar
+- Fixed Omnirig drivers keep sending frequency change (issue #872)
 
 2025/12/19 - 0.47.1
 - [CHANGED] - DXC - VE7CC-type Cluster is correctly detected (PR #851 @kyleboyle)
